Release 1.24
    Added support for asymmetric password encryption.

Release 1.23

    Fix failing binding of integer values to unsigned int columns
    when using placeholders.

Release 1.22

    Map prepare_cached as prepare to avoid various issues with
    transactions.

Release 1.20

    Fix issue with locale variable incorrectly set on AIX.
    Allow passwords > 32 characters.

Release 1.19

    Fix compilation issue when CS_BIG_TIME is not defined.

Release 1.18

    Fix further issues with FreeTDS.
    Improved error handling for numeric/decimal values.
    Fix logic error in the finish() call when syb_flush_finish is enabled.

Release 1.17

    Fix various longstanding build issues with FreeTDS and/or MS-SQL
    Update CPAN metadata to reflect github repo

Release 1.16

    Fix buffer overflow with ASE 16.x

Release 1.15

    Minor fixes to allow building on Windows.
    Fixed syntax error at compile time for some compilers
    Allow database names with special chars in the name.
    Change to ct_data_info() to flag an error in case the CS_IODESC returned
    doesn't include a valid text pointer - this happens if the text/image column
    is nullable and has not been initialized in the database.
    
Release 1.14

    Fix bad size handling for unicode data. 
    Remove default charset setting to utf8 (this had been done in 1.11 as part of
    improved utf8 handling, but has negative side-effects. If unicode handling is needed
    then set "charset=utf8" as part of the connection string.
    Enforce the fact that utf8/unicode handling only works with OpenClient 15.x or later.

Release 1.13

    Fix for incorrect UTF8 handling when retrieving UNICODE data (Jean-Pierre Rupp).

Release 1.12

    Bug/Typo/Compatibility fixes with various versions of OpenClient.
    Experimental: Handle in/out parameters (Merijn Broeren)
    
Release 1.11

    Remove reliance on PERL_POLLUTE.
    Add better support for utf8 (Dave Rolsky)
    
Release 1.10
